--- a/epub/OEBPS/cover.xhtml
+++ b/epub/OEBPS/cover.xhtml
@@ -8,7 +8,7 @@
 
 <body>
   <div style="text-align: center; padding: 0pt; margin: 0pt;">
-    <svg xmlns="http://www.w3.org/2000/svg" height="100%" preserveAspectRatio="xMidYMid meet" version="1.1" viewBox="0 0 1750 2483" width="100%" xmlns:xlink="http://www.w3.org/1999/xlink"><image width="1750" height="2483" xlink:href="../Images/cover-illustration.png"/></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" height="100%" preserveAspectRatio="xMidYMid meet" version="1.1" viewBox="0 0 1750 2483" width="100%" xmlns:xlink="http://www.w3.org/1999/xlink"><image width="1750" height="2483" xlink:href="images/cover-illustration.png"/></svg>
   </div>
 </body>
 </html>
