--- a/epub/OEBPS/recipe-001.xhtml
+++ b/epub/OEBPS/recipe-001.xhtml
@@ -5,7 +5,7 @@
 <head>
   <title></title>
   <meta charset="utf-8"/>
-  <link href="../Styles/recipe.css" rel="stylesheet" type="text/css"/>
+  <link href="styles/cookbook.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
