--- a/epub/OEBPS/nav.xhtml
+++ b/epub/OEBPS/nav.xhtml
@@ -5,7 +5,7 @@
 <head>
   <title></title>
   <meta charset="utf-8"/>
-  <link href="../Styles/sgc-nav.css" rel="stylesheet" type="text/css"/>
+  <link href="styles/sgc-nav.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body epub:type="frontmatter">
