Fix pathname - nav.html

--- a/epub/OEBPS/nav.xhtml
+++ b/epub/OEBPS/nav.xhtml
@@ -41,7 +41,7 @@
     <li><a href="chapter-002.xhtml">鸡鸭类</a> 
 
     <ol>
-      <li><a href="../../">怪味鸡</a></li>
+      <li><a href=".">怪味鸡</a></li>
     </ol></li>
 
     <li><a href="chapter-003.xhtml">鱼虾类</a></li>
@@ -56,13 +56,13 @@
 
     <li><a href="chapter-008.xhtml">重庆市部分菜肴</a></li>
 
-    <li><a href="../../">校勘记</a></li>
+    <li><a href=".">校勘记</a></li>
 
-    <li><a href="../../">索引</a></li>
+    <li><a href=".">索引</a></li>
 
-    <li><a href="../../">版次标记</a></li>
+    <li><a href=".">版次标记</a></li>
 
-    <li><a href="../../">封底</a></li>
+    <li><a href=".">封底</a></li>
   </ol></nav>
 
   <nav epub:type="landmarks" id="landmarks" hidden=""><h1>Landmarks</h1>
