Rename cover.xhtml to front-cover.xhtml, and add back-cover.xhtml

--- a/epub/OEBPS/nav.xhtml
+++ b/epub/OEBPS/nav.xhtml
@@ -12,7 +12,7 @@
   <nav epub:type="toc" id="toc" role="doc-toc"><h1>Table of Contents</h1>
 
   <ol>
-    <li><a href="cover.xhtml">封面</a></li>
+    <li><a href="front-cover.xhtml">封面</a></li>
 
     <li><a href="half-title.xhtml">书名页</a></li>
 
